Fixed who-inner section on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -594,6 +594,7 @@ footer small {
 
   #who-inner {
     width: 100%;
+    right: 0px;
   }
 }
 
